k3s/components/redis/ingress-route-tcp.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRouteTCP
metadata:
  name: redis
  namespace: shuttle
spec:
  entryPoints:
    - websecure
  routes:
    - match: HostSNI(`redis.shuttle.sadra.xyz`)
      services:
        - name: redis-master
          port: 6379
  tls:
    certResolver: le
